Opened 16 years ago

Closed 16 years ago

#1832 closed bug (fixed)

condition variable entries are only removed on notify

Reported by: axeld Owned by: bonefish
Priority: blocker Milestone: R1/alpha1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

It looks like condition variables are only removed if a thread is actually waiting and gets notified (ie. not interrupted by a signal). This causes a panic in the PrivateConditionVariableEntry destructor.

This is easily reproducible by keeping a "tail -f /var/log/syslog" running in a Terminal when shutting down.

Change History (2)

comment:1 by axeld, 16 years ago

Ticket #1831 is a duplicate of this one, and contains a stack crawl if you need one :-)

comment:2 by bonefish, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev24063.

Note: See TracTickets for help on using tickets.