We have to remove the thread's condition variable entries when interrupted early, i.e. when signals were already pending when we started waiting. Fixes #1832.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24063 a95241bf-73f2-0310-859d-f6bbb57e9c96